Add eclipse install steps